fix: update letter spacing
ref: MANAGER-4841

--- a/packages/manager/modules/account-sidebar/src/index.scss
+++ b/packages/manager/modules/account-sidebar/src/index.scss
@@ -41,6 +41,7 @@ ovh-manager-account-sidebar {
         text-decoration: none;
         white-space: initial;
         text-align: left;
+        letter-spacing: normal;
 
         .oui-icon {
           color: $p-500;
